js/js.translator/testData/incremental/invalidation/localObjectsLeakThroughInterface/lib1/interface.2.kt
interface Interface {
    konst extraNumber get() = 1

    fun getNumber() = 0

    fun getOtherNumber() = 1
}
